# larradiosource

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/: optimize.py  simulate.py
config/: detector.toml  np04_simulation.toml  radiation.toml  simulation.toml
docs/configuration/: detector.md  geometry.md  radiation.md
docs/uml/: detector.puml  geometry.puml  larradiosource.puml  source.puml
scripts/Base-Pietropaolo/: bi207_pulse_processing.py  bi207_pulse_processing_fast.py  bi207_simulation.py  bi207_simulation_fast.py  plot_energy_histogram.py  plot_pulse_histogram.py
src/bi207_simulation/: __init__.py  detector.py  geometry.py  radiation.py  random.py  signals.py
src/larradiosource/: __init__.py  detector.py  signals.py  simulation.py
src/larradiosource/cli/: main.py
tests/: test_emission_positions.py  test_geometries.py  test_geometry_configs.py  test_radiation_source.py
